--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -17,7 +17,6 @@ body {
   top: 0;
   bottom: 0;
   z-index: 100; /* Behind the navbar */
-  padding: 48px 0 0; /* Height of navbar */
   box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
 }
 
@@ -107,4 +106,16 @@ body {
 .form-control-dark:focus {
   border-color: transparent;
   box-shadow: 0 0 0 3px rgba(255, 255, 255, .25);
+}
+
+/* Main */
+
+.section {
+    border-bottom: 01px solid #d2d2d2;
+    padding: 10px 0px;
+}
+
+div svg {
+    height: 100%;
+    width: 100%;
 }
