--- a/static/css/dashboard.css
+++ b/static/css/dashboard.css
@@ -37,7 +37,7 @@ body {
 .sidebar-sticky {
   position: relative;
   top: 0;
-  height: calc(100vh - 48px);
+  height: calc(100vh - 20px);
   padding-top: .5rem;
   overflow-x: hidden;
   overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
@@ -113,4 +113,8 @@ body {
 .section {
     border-bottom: 01px solid #d2d2d2;
     padding: 10px 0px;
+}
+
+#circumplex canvas {
+    height: 100%;
 }
