--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="row">
       <nav id="sidebarMenu" class="col-md-2 col-lg-2 d-md-block bg-light sidebar sidebarLeft collapse">
         <div class="sidebar-sticky pt-3">
-          <form onsubmit="return false;">
+          <form id="inputParams" onsubmit="return false;">
             <div class="form-group">
               <label for="dataset">Dataset</label>
               <select class="form-control form-control-sm" id="dataset" required>
@@ -26,7 +26,7 @@
               </select>
             </div>
 
-            <div class="form-group" style="display:none;">
+            <div class="form-group">
               <label for="fselector">Feature Selector</label>
               <select class="form-control form-control-sm" id="fselector">
                 <option value="">None</option>
@@ -34,31 +34,54 @@
               </select>
             </div>
 
-            <div class="form-group">
-              <label for="classifier">Classifier</label>
-              <select class="form-control form-control-sm" id="classifier" required>
-                <option value="">None</option>
-                <option value="svm">SVM</option>
-                <option value="knn">kNN</option>
-              </select>
+            <div class="form-row">
+              <div class="form-group col-md-7">
+                <label for="mode">Classification by</label>
+                <select class="form-control form-control-sm" id="mode" required>
+                  <option value="AVs">A-V scale (1 to 9)</option>
+                  <option value="AVl">A-V levels</option>
+                  <option value="emo">Discrete emotions</option>
+                </select>
+              </div>
+              <div class="form-group col-md-5">
+                <label for="classifier">Classifier</label>
+                <select class="form-control form-control-sm" id="classifier" required>
+                  <option value="">None</option>
+                  <option value="svm">SVM</option>
+                  <option value="knn">kNN</option>
+                </select>
+              </div>
+            </div>
+
+            <div class="form-row">
+              <div class="form-group col-md-6">
+                <label for="nClasses">Num. classes</label>
+                <select class="form-control form-control-sm" id="nClasses" required>
+                  <option value="4">4</option>
+                  <option value="9">9</option>
+                </select>
+              </div>
+              <div class="form-group col-md-6">
+                <label for="testSize">Testing set (%)</label>
+                <input type="text" class="form-control form-control-sm" id="testSize" style="text-align:center;" value="20" required>
+              </div>
             </div>
 
             <div class="form-row">
               <div class="form-group col-md-6">
                 <label for="winSize">Window size (secs)</label>
                 <input type="text" class="form-control form-control-sm" id="winSize" style="text-align:center;" value="60" required>
-              </div>
-              <div class="form-group col-md-6" style="display:none;">
-                <label for="winOverlap">Time overlap (secs)</label>
-                <input type="text" class="form-control form-control-sm" id="winOverlap" style="text-align:center;" value="0" required>
+                <input type="hidden" class="form-control form-control-sm" id="winIni" value="0">
+                <input type="hidden" class="form-control form-control-sm" id="sampleSize" value="128">
               </div>
             </div>
 
             <div class="form-group">
-              <label for="signals">Signals</label>
-              <select multiple class="form-control form-control-sm" id="signals" required>
+              <label for="channels">Signals</label>
+              <select multiple id="channels" style="min-height: 120px;" class="form-control form-control-sm" required>
               </select>
             </div>
+
             <input id="btnExec" class="btn btn-secondary btn-sm" type="submit" value="Process">
           </form>
         </div>
@@ -66,33 +89,28 @@
 
       <main role="main" class="col-md-6 ml-sm-auto col-lg-8 px-md-4" style="margin-right: auto;">
           <h4 class="section">Classification</h4>
-          <div id="circumplex" style="height:100%; width:100%;"></div>
-          <h4 class="section" style="display:none;">Time Series</h4>
-          <div id="chartSignals" class="row" style="display:none; height:30%;">
-          </div>
+          <div id="circumplex" style="height:100%; width:100%; text-align:center;"></div>
+          <!--
+          <h4 class="section">Time Series</h4>
+          <div id="chartSignals" class="row" style="height:30%;"></div>
+          -->
       </main>
 
       <nav id="sidebarMenu2" class="col-md-2 col-lg-2 d-md-block bg-light sidebar sidebarRight collapse">
         <div class="sidebar-sticky pt-3">
-          <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
-            <span>Feature Contribution</span>
-          </h6>
-          <div id="heatmap" style="width:100%; height:90%;"></div>
-          <img id="colormap" src="static/images/colormap.png" style="width:50%; display:none;"></img>
+          <label for="heatmap"><b>Feature Contribution</b></label>
+          <div id="heatmap" style="width:100%; height:95%;"></div>
         </div>
       </nav>
-
-
     </div>
   </div>
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-  <script>window.jQuery || document.write('<script src="../assets/js/vendor/jquery.slim.min.js"><\/script>')</script>
+
+  <!-- Load libs JS -->
+  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="/static/lib/js/bootstrap.bundle.js"></script>
-  <!-- Load d3.js -->
-  <script src="https://d3js.org/d3.v4.js"></script>
-  <script src="https://d3js.org/d3-color.v1.min.js"></script>
-  <script src="https://d3js.org/d3-interpolate.v1.min.js"></script>
-  <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega@5.13.0"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-lite@4.14.1"></script>
+  <script src="https://cdn.jsdelivr.net/npm/vega-embed@6.10.0"></script>
 
   <!-- Custom files -->
   <script src="/static/js/classes/FeatureManager.js"></script>
